# prompt-test

./: pyproject.toml
prompt-engineering-google-whitepaper/: 04-01 Zero-shot.ipynb  04-02One-shot & Few-shot.ipynb
